<package format="3">
  <name>panda_planning</name>
  <version>0.0.0</version>
  <description>MoveIt2 planning node for Panda</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
